# cosmic-ext-clankers

./: .gitmodules  Cargo.toml  README.md  justfile  recovered_fragments.txt
i18n/en/: cosmic_ai_interface.ftl
resources/: app.desktop  app.metainfo.xml
src/: app.rs  main.rs
src/models/gemini/: gemini.rs  mod.rs
