[package]
name = "cosmic-ai-interface"
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"
description = "An applet to send prompts to different ai models from the panel"
repository = "https://github.com/Ignavar/cosmic-ai-interface.git"

[dependencies]
constcat = "0.6.1"
futures-util = "0.3.31"
i18n-embed-fl = "0.10"
rdev = "0.5.3"
reqwest = { version = "0.13.1", features = ["json"] }
rust-embed = "8.7.2"
serde = "1.0.228"
serde_json = "1.0.149"
tokio = { version = "1.48.0", features = ["full"] }
iced_selection = {path = "./iced_selection", features=["markdown"]}

[dependencies.i18n-embed]
version = "0.16"
features = ["fluent-system", "desktop-requester"]

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
# See https://github.com/pop-os/libcosmic/blob/master/Cargo.toml for available features.
features = [
    # Applet support
    "applet",
    "applet-token",
    # Uses cosmic-settings-daemon to watch for config file changes
    "dbus-config",
    # Support creating additional application windows.
    "multi-window",
    # Uses tokio as the executor for the runtime
    "tokio",
    # Add Wayland support to winit
    "wayland",
    # Windowing support for X11, Windows, Mac, & Redox
    "winit",
    "markdown",
    "highlighter"
]

# Uncomment to test a locally-cloned libcosmic
# [patch.'https://github.com/pop-os/libcosmic']
# libcosmic = { path = "../libcosmic" }
# cosmic-config = { path = "../libcosmic/cosmic-config" }
# cosmic-theme = { path = "../libcosmic/cosmic-theme" }
